--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,11 +29,11 @@ jobs:
         run: npm run build
 
       # 部署到服务器
-      - name: Deploy to Server
-        uses: appleboy/scp-action@master
+      - name: scp pipelines
+        uses: cross-the-world/ssh-scp-ssh-pipelines@latest
         with:
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.USERNAME }}
-          password: ${{ secrets.PASSWORD }}
-          source: "./dist"
-          target: "../usr/share/nginx/html"
+          host: ${{ secrets.DHOST }}
+          user: ${{ secrets.USERNAME }}
+          pass: ${{ secrets.PASSWORD }}
+          scp: |
+            './dist/*' => ../usr/share/nginx/html/
