--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,5 +35,8 @@ jobs:
           host: ${{ secrets.DHOST }}
           user: ${{ secrets.USERNAME }}
           pass: ${{ secrets.PASSWORD }}
+          connect_timeout: 10s
+          first_ssh: |
+            rm -rf /usr/share/nginx/html
           scp: |
             './dist/*' => ../usr/share/nginx/html/
