--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,4 +39,4 @@ jobs:
           first_ssh: |
             rm -rf /usr/share/nginx/html
           scp: |
-            './' => /usr/share/nginx/html/
+            './dist/*' => ../usr/share/nginx/html/
