--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,5 +39,6 @@ jobs:
           first_ssh: |
             rm -rf /usr/share/nginx/html
             ls
+            pwd
           scp: |
             './dist/*' => ../usr/share/nginx/html/
