--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,4 +41,4 @@ jobs:
             ls
             pwd
           scp: |
-            './dist' => ../usr/share/nginx/html
+            './index.html' => ../usr/share/nginx/html/
